protocolmodel/mcrl2/testing/errors/error_3002.mcf
% E3002 - No mutually supported cryptosuite
[true* . ERROR_MSG(E3002)] false